--- a/packages/weight_tracker/package.json
+++ b/packages/weight_tracker/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "mobx": "^5.13.0",
+    "mobx-react": "^6.1.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "styled-components": "^4.3.2",
+    "styled-theming": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
