--- a/packages/picasso/package.json
+++ b/packages/picasso/package.json
@@ -1,41 +1,42 @@
 {
-  "name": "picasso",
-  "version": "0.1.0",
+  "name": "@benfixit/picasso",
+  "version": "1.0.0",
+  "description": "A collection of reusable React styled components",
+  "main": "index.js",
+  "author": "Inya Chukwuemeka",
+  "license": "MIT",
   "private": true,
+  "scripts": {
+    "start": "webpack-dev-server",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
+  },
+  "keywords": [
+    "Reusable",
+    "Styled Components"
+  ],
+  "peerDependencies": {
+    "react": "^16.9.0"
+  },
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1",
-    "styled-components": "^4.3.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "styled-components": "^4.3.2",
+    "webpack": "^4.40.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.6.0",
+    "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-react": "^7.0.0",
     "@storybook/addon-actions": "^5.2.0",
     "@storybook/addon-links": "^5.2.0",
     "@storybook/addons": "^5.2.0",
-    "@storybook/react": "^5.2.0"
+    "@storybook/react": "^5.2.0",
+    "babel-loader": "^8.0.6",
+    "webpack-cli": "^3.3.8",
+    "webpack-dev-server": "^3.8.0"
   }
 }
