Button and Switch components

--- a/packages/distance_calculator/package.json
+++ b/packages/distance_calculator/package.json
@@ -12,12 +12,16 @@
     "Calculator"
   ],
   "scripts": {
-    "build": "webpack-dev-server"
+    "start": "webpack-dev-server"
   },
   "dependencies": {
     "@benfixit/picasso": "^1.0.0",
+    "hoist-non-react-statics": "^3.3.0",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-values": "^0.3.3",
+    "styled-components": "^4.4.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.0",
