--- a/packages/picasso/package.json
+++ b/packages/picasso/package.json
@@ -20,10 +20,14 @@
     "react": "^16.9.0"
   },
   "dependencies": {
+    "check-types": "^10.0.0",
+    "hoist-non-react-statics": "^3.3.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-values": "^0.3.3",
     "styled-components": "^4.3.2",
+    "styled-system": "^5.1.2",
     "webpack": "^4.40.2"
   },
   "devDependencies": {
@@ -32,7 +36,9 @@
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "@storybook/addon-actions": "^5.2.0",
+    "@storybook/addon-knobs": "^5.2.4",
     "@storybook/addon-links": "^5.2.0",
+    "@storybook/addon-notes": "^5.2.4",
     "@storybook/addons": "^5.2.0",
     "@storybook/react": "^5.2.0",
     "babel-loader": "^8.0.6",
