--- a/package.json
+++ b/package.json
@@ -2,18 +2,36 @@
   "name": "pet_project",
   "npmClient": "yarn",
   "private": true,
-  "packages": ["packages/*"],
+  "packages": [
+    "packages/*"
+  ],
   "useWorkspaces": true,
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/benfixit/pet_projects"
   },
   "devDependencies": {
-    "lerna": "^3.14.1"
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "husky": "^3.0.9",
+    "lerna": "^3.14.1",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^2.0.0"
   },
   "scripts": {
-    "run:weight": "cd packages/weight_tracker && yarn start",
-    "run:storybook": "cd packages/picasso && yarn run storybook"
+    "run:distance": "cd packages/distance_calculator && yarn start",
+    "run:storybook": "cd packages/picasso && yarn run storybook",
+    "lint": "lerna exec --no-bail eslint src/",
+    "lint:fix": "lerna exec --no-bail eslint src/ --fix"
   }
 }
